--- a/src/app.css
+++ b/src/app.css
@@ -10,64 +10,131 @@ body {
     margin: 200px auto;
     padding: 0px 10px 0px 10px;
 }
-.input{
-    min-height: 40px;
-    border-radius: 5px;
+
+.input {
+    min-height: 50px;
+    border-radius: 10px;
     border: none;
-    font-size: 22px;
-    font-weight: 400;
+    font-size: 30px;
+    font-weight: 500;
+    background-color: #F3F3F3;
+    color: #1F3757;
+
+
+}
+
+form {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.inputBtn {
+    min-height: 50px;
+    border-radius: 10px;
+    border: none;
+    font-size: 30px;
+    font-weight: 500;
     background-color: #F3F3F3;
     color: #1F3757;
 }
-form{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-.inputBtn{
-  min-height: 40px;
-  border-radius: 5px;
-  border:none;
-  font-size: 22px;
-  font-weight: 400;
-  background-color: #F3F3F3;
-  color:#1F3757;
-}
-.titleoff{
+
+.titleoff {
     color: #ffffff;
     font-size: 30px;
-   margin-left: -20px;
+    margin-left: -20px;
 }
-.list{
+
+.list {
     list-style: none;
 }
-.list h3{
+
+.list h3 {
     color: wheat;
-    font-size: 30px;
+    font-size: 40px;
 }
-.buttons{
+
+.buttons {
     display: flex;
     gap: 20px;
     align-items: center;
 }
-.deleteButton{
-    min-height: 40px;
-    border-radius: 5px;
+
+.deleteButton {
+    min-height: 50px;
+    border-radius: 10px;
     border: none;
     background-color: #F3F3F3;
-    font-size: 22px;
-    color:#650909;
+    font-size: 30px;
+    color: #650909;
 }
-.editButton{
-    min-height: 40px;
-    border-radius: 5px;
+
+.editButton {
+    min-height: 50px;
+    border-radius: 10px;
     border: none;
     background-color: #F3F3F3;
-    font-size: 22px;
-    color:#09650b;   
+    font-size: 30px;
+    color: #09650b;
 }
-.titleTodo{
+
+.titleTodo {
     text-align: center;
     color: #F3F3F3;
-    font-size: 40px;
+    font-size: 60px;
+}
+
+@media screen and (max-width: 550px) {
+    .container {
+        margin: 100px auto;
+        padding: 0 5px;
+    }
+
+    form {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .input,
+    .inputBtn {
+        width: 100%;
+        font-size: 20px;
+        min-height: 40px;
+    }
+
+    .titleoff {
+        font-size: 20px;
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .list h3 {
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .buttons {
+        /* flex-direction: column; */
+        max-width: 200px;
+        gap: 10px;
+    }
+
+    .deleteButton,
+    .editButton {
+        font-size: 20px;
+        min-height: 40px;
+        width: 100%;
+    }
+
+    .titleTodo {
+        font-size: 40px;
+    }
+
+    .input {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        text-align: center;
+    }
 }
